<resources>
    <string name="app_name">Inventory</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="inventory">Inventory</string>
    <string name="login">Login</string>
    <string name="userHint">Escribe tu email</string>
    <string name="passwordHint">Escribe tu contraseña</string>
    <string name="tvRecording">I remember</string>
    <string name="loginApps">Login for</string>
    <string name="registerbtn">Register</string>
    <string name="sing_in">Sign</string>
    <string name="registroTitle">Registro</string>
    <string name="RegisterNombreUsuario">Dame tu nombre de usuario</string>
    <string name="RegisterCorreoUsuario">Dame tu correo</string>
    <string name="RegisterPasswordUsuario">Dame tu contraseña</string>
    <string name="RegisterPasswordSegundaUsuario">Repite tu contraseña</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="ImgbtnInventory">Un boton imagen de inventario</string>
    <string name="ImgbtnDepedencia">Un boton imagen de  Dependencia</string>
    <string name="ImgbtnSecciones">Un boton imagen de  Secciones</string>
    <string name="ImgbtnProducts">Un boton imagen de productos</string>
    <string name="ImgbtnAbout">" Un boton imagen sobre mi"</string>
    <string name="ImgbtnSettings">Un boton imagen de ajustes</string>
    <string name="FechaCreacion">Fecha de Creacion</string>
    <string name="fechaFin">Fecha de Fin</string>
    <string name="fechaActivo">Fecha de Activo</string>
    <string name="ModficarInventario">Modificar Inventario</string>
    <string name="ok">Okey</string>
    <string name="Okey">Okey</string>
    <string name="fab_contentDescription">un boton flotante para añadir</string>
    <string name="Nombre">Nombre</string>
    <string name="shortNombre">Nombre corto</string>
    <string name="Descripcion">Descripcion</string>
    <string name="AboutAsMenu">about us</string>
    <string name="SettingsMenu">Ajustes</string>
    <string name="action_order_dependecy">ordenar</string>
    <string name="errorUsuarioInvalido">usuario invalido</string>
    <string name="title_delete_dependency">Eliminar Depedencia</string>
    <string name="message_delete_dependency">¿Seguro quieres eliminar %1$s?</string>
    <string name="name_channel">InventoryNotifactionChannel</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sincronizar depedecias periodicamente</string>
    <string name="attachment_title">descargar imagenes de la depedencia</string>
    <string name="attachment_summary_on">Descargando imagenes
    </string>
    <string name="attachment_summary_off">No se descarga imagenes</string>
    <string name="dependency_header">Dependencias</string>
    <string name="help_category">Ayuda</string>
    <string name="help_point">nuestra web</string>
    <string name="notification_header">Notificaciones</string>
    <string name="notifaction">notificacion</string>
    <string name="ringtone">tono</string>
    <string name="rigtone_notifacation">tono para las notifiaciones</string>
    <string name="key_accounts">acount</string>
    <string name="editUser">Cambiar correo del usuario</string>
    <string name="key_rigtone">rigtone</string>
    <string name="key_help_point">help</string>
    <string name="action_search">search</string>
    <string name="dependencys">Depedencias</string>
    <string name="sections">secciones</string>
    <string name="opciones">opciones</string>
    <string name="info">info</string>
    <string name="menuDescripcion">descripcion</string>
    <string name="mapa">mapa</string>
    <string name="EligeDependencia">Dependencia</string>
    <string name="agregar">Agregar</string>
    <string name="siguiente">siguiente</string>
    <string name="errorDependencyFailShortName">Nombre corto invalido</string>
    <string name="errorDependencyFailDescription">Descripcion invalida</string>
    <string name="errorDependencyDuplicateName">Nombre corto duplicado</string>
    <string name="errorDependencyShortNameDuplicateName">Nombre corto duplicado</string>
    <string name="AgregaDepedencia">No tienes ninguna depedencia crea una</string>
    <string name="errorSectionFailName">Nombre invalido</string>
    <string name="errorSectionFailShortName">Nombre corto invalido</string>
    <string name="errorSectionFailDescription">Descripcion Invalida</string>
    <string name="errorSectionIdNoSelected">Selecciona una dependencia</string>
    <string name="errorSectionNameDuplicate">Nombre duplicado</string>
    <string name="errorSectionShortNameDuplicate">Nombre corto duplicado</string>
</resources>