<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/dependency_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notification_header">

        <ListPreference
            android:defaultValue="tone"
            android:entries="@array/rigtone"
            android:entryValues="@array/rigtone_values"
            android:key="@string/ringtone"
            android:summary="Select a foreground color"
            android:title="@string/rigtone_notifacation" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/help_category">

        <Preference android:title="@string/help_point" android:key="@string/key_help_point">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://lily-open-f7b.notion.site/WorldBuilding-965933b188844f0c911cb5340d030f23" />
        </Preference>

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <Preference android:fragment="com.fjmg.inventory.ui.preferences.AccountsFragment"
        android:key="@string/key_accounts" android:summary="Cambiar informacion" android:title="Cuentas"/>
</PreferenceScreen>
