<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Dashboard.DashBoardFragment"
    android:stretchColumns="0,1"
    android:gravity="center">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageButton
            style="@style/DashboardButtons"
            android:id="@+id/ImgbtnInventory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_inventario"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/ImgbtnInventory" />

        <ImageButton
            style="@style/DashboardButtons"
            android:id="@+id/ImgbtnDependecia"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_dependencia"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/ImgbtnDepedencia"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="20dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageButton
            style="@style/DashboardButtons"
            android:id="@+id/ImgbtnSecciones"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_secciones"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/ImgbtnSecciones"/>

        <ImageButton
            style="@style/DashboardButtons"
            android:id="@+id/ImgbtnProducts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_productos"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/ImgbtnProducts"
            />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="20dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageButton
            style="@style/DashboardButtons"
            android:id="@+id/ImgbtnAbout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_about"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/ImgbtnAbout"
            />

        <ImageButton
            style="@style/DashboardButtons"
            android:id="@+id/ImgbtnSettings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_settings"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/ImgbtnSettings"
            />

    </TableRow>

</TableLayout>